# farcaster-cleaner

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  cli.py  config.py  jobs.py  main.py  models.py  neynar_client.py  safety.py  store.py  worker.py
app/bot/: keyboards.py  main.py  messages.py  router.py  states.py  telegram_auth.py  webhook.py
app/db/: schema.py
app/services/: __init__.py  abuse.py  audit.py  billing_limits.py  deletion_service.py  entitlements.py  kill_switch.py  plans.py  preferences.py  privacy.py  public_auth.py  safety_gate.py  scan_service.py  secret_store.py  signer_onboarding.py  usage.py  users.py
app/services/billing/: __init__.py  checkout.py  models.py  provider.py  stripe_provider.py  webhook.py
app/services/queue/: __init__.py  base.py  in_memory.py  postgres_queue.py  redis_queue.py
app/static/: app.css  app.js  auth.css  dashboard.css  home.css  saas.css
app/templates/: admin.html  auth.html  base.html  billing.html  connect.html  dashboard.html  delete.html  home.html  job_status.html  saas.html
app/web/: admin_pages.py  auth.py  billing_pages.py  connect_pages.py  delete_pages.py  saas_pages.py
data/: farcaster_cleaner.sqlite
tests/: test_config.py  test_models.py  test_safety.py  test_store.py
