[project]
name = "farcaster-cleaner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110.0", "uvicorn[standard]>=0.27.0", "httpx>=0.27.0", "pydantic>=2.6.0", "pydantic-settings>=2.2.0", "python-dotenv>=1.0.1", "jinja2>=3.1.3", "python-multipart>=0.0.9", "aiogram>=3.4.0", "cryptography>=42.0.0"]
[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "respx>=0.21.0"]

